--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,4 +2,5 @@
     <h1>{{pageTitle}}</h1>
     <P><a href="/">Home</a></P>
     <P><a href="/about">About</a></P>
+    <P><a href="/portfolio">Portfolio</a></P>
 </header>
