--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,7 +11,7 @@
     <p>
         {{screamIT message}}
     </p>
-    <p>Cloned from Git</p>
+    <p>Cloned from Git Again</p>
 </body>
 {{> footer}}
 
